syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.nicolebertolo.grpc.customerapi";
option java_outer_classname = "ProductProto";

service ProductServiceAPI {
  rpc FindProductById(FindProductByIdRequest) returns (FindProductByIdResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindAllProducts(FindAllProductsRequest) returns (FindAllProductsResponse) {}
  rpc HandleProductQuantity(HandleProductQuantityRequest) returns (HandleProductQuantityResponse) {}
}

service ProductCacheAPI {
  rpc FindTopProductsSold(FindTopProductsSoldRequest) returns (FindTopProductsSoldResponse) {}
}

message FindProductByIdRequest {
  string product_id = 1;
  string tracing = 2;
}

message FindProductByIdResponse {
  ProductDto product_dto = 1;
}

message CreateProductRequest {
  string identification_code = 2;
  double price = 3;
  string name = 4;
  string description = 5;
  StockInfoDto stock_info_dto = 6;
  string tracing = 7;
}

message CreateProductResponse {
  ProductDto product_dto = 1;
}

message FindAllProductsRequest {
  string tracing = 1;
}

message FindAllProductsResponse {
  repeated ProductDto product_dto = 1;
}

message FindTopProductsSoldRequest {
  string tracing = 1;
}

message FindTopProductsSoldResponse {
  repeated TopProductSoldDto top_product_sold_dto = 1;
}
message HandleProductQuantityRequest {
  string product_id = 1;
  int64 quantity = 2;
  string tracing = 3;
}

message HandleProductQuantityResponse {
  int32 new_quantity = 2;
}

message TopProductSoldDto {
  string id = 1;
  ProductDto product_dto = 2;
  int32 quantity_sold = 3;
}

message ProductDto {
  string id = 1;
  string identification_code = 2;
  double price = 3;
  string name = 4;
  string description = 5;
  StockInfoDto stock_info_dto = 6;
  string creation_date = 7;
  string lastUpdatedDate = 8;
}

message StockInfoDto {
  int32 quantity = 1;
  string supplier_id = 2;
}